[tool.poetry]
name = "polybar-mail"
version = "0.1.0"
description = "A Polybar module to show unread messages from mail"
authors = ["Kien Nguyen <kiennt2609@gmail.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
